<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">


    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="mmad.sjurdur.tingle.TingleActivity">

        <!-- Last thing added -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headline"/>

        <TextView
            android:id="@+id/last_thing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- thin horizontal line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <!-- Button to add new thing -->
        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/heading_create"/>

        <!-- thin horizontal line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <!-- What new thing -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_thing"/>

            <EditText
                android:id="@+id/what_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@+id/where_text"
                android:inputType="text"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/where"/>

            <EditText
                android:id="@+id/where_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textImeMultiLine"
                android:imeOptions="actionDone"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="50dp">


            <Button
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_button_text"/>

            <EditText
                android:id="@+id/search_text_where"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionDone"
                />
        </LinearLayout>

        <!-- filler -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </FrameLayout>

        <!-- bottom content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activity_list_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_list_button"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>